fixed spacing

--- a/style/tailwind.css
+++ b/style/tailwind.css
@@ -793,6 +793,10 @@ video {
   height: 0px;
 }
 
+.h-12 {
+  height: 3rem;
+}
+
 .max-h-72 {
   max-height: 18rem;
 }
@@ -1016,6 +1020,10 @@ video {
 
 .bg-\[url\(\'assets\/arrow-down\.svg\'\)\] {
   background-image: url('assets/arrow-down.svg');
+}
+
+.bg-\[url\(\'\.\.\/assets\/arrow-down\.svg\'\)\] {
+  background-image: url('../assets/arrow-down.svg');
 }
 
 .from-zinc-900 {
@@ -1500,6 +1508,11 @@ form button:hover span {
     padding-bottom: 0px;
   }
 
+  .md\:py-6 {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
   .md\:text-9xl {
     font-size: 8rem;
     line-height: 1;
@@ -1579,6 +1592,11 @@ form button:hover span {
   .lg\:py-24 {
     padding-top: 6rem;
     padding-bottom: 6rem;
+  }
+
+  .lg\:py-12 {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
   }
 }
 
